--- a/src/app/components/services/remove/remove-service-modal.html
+++ b/src/app/components/services/remove/remove-service-modal.html
@@ -21,43 +21,49 @@
 -->
 
 
-<button class="close" ng-click="closeThisDialog()">
+<button class="close" ng-click="removeService.modalInstance.close()">
   <svg class="icon">
     <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
   </svg>
 </button>
 
-<div guh-wizard handle="removeService" show-prev="false" show-next="false">
-  <div guh-wizard-step title="Remove {{ remove.service.name }}">
-    <p>{{ remove.service.name }} is managed by another service: <span>{{ remove.parentService.name }} ({{ remove.parentService.deviceClass.vendor.name === remove.parentService.deviceClass.name || remove.parentService.deviceClass.name === remove.parentService.name ? remove.parentService.deviceClass.vendor.name : remove.parentService.deviceClass.vendor.name + ', ' + remove.parentService.deviceClass.name }})</span></p>
+<div class="inner-content" ng-if="!removeService.servicePoliciesSet && removeService.parentService">
+  <h3>Connected services found</h3>
 
-    <p>To remove {{ remove.service.name ? remove.service.name : remove.service.deviceClass.name }}, {{ remove.parentService.name ? remove.parentService.name : remove.parentService.deviceClass.name }} has to be removed too.</p>
+  <p>{{ removeService.currentService.name }} is managed by another service: <span>{{ removeService.parentService.name }} ({{ removeService.parentService.deviceClass.vendor.name === removeService.parentService.deviceClass.name || removeService.parentService.deviceClass.name === removeService.parentService.name ? removeService.parentService.deviceClass.vendor.name : removeService.parentService.deviceClass.vendor.name + ', ' + removeService.parentService.deviceClass.name }})</span></p>
 
-    <p ng-if="remove.childServices.length > 1">Be aware when removing {{ remove.parentService.name ? remove.parentService.name : remove.parentService.deviceClass.name }} all it's connected services are removed too:</p>
-    <p ng-if="remove.childServices.length > 1" ng-repeat="childService in remove.childServices | orderBy: 'name' track by $index">{{ childService.name ? childService.name : childService.deviceClass.name }}</p>
+  <p>To remove {{ removeService.currentService.name ? removeService.currentService.name : removeService.currentService.deviceClass.name }}, {{ removeService.parentService.name ? removeService.parentService.name : removeService.parentService.deviceClass.name }} has to be removed too.</p>
 
-    <button class="button" ng-click="remove.removeAll()">Remove {{ remove.parentService.name ? remove.parentService.name : remove.parentService.deviceClass.name }} and {{ remove.childServices.length > 1 ? remove.childServices.length + ' connected services' : (remove.service.name ? remove.service.name : remove.service.deviceClass.name) }}</button>
-  </div>
+  <p ng-if="removeService.childServices.length > 0">Be aware when removing {{ removeService.parentService.name ? removeService.parentService.name : removeService.parentService.deviceClass.name }} all it's connected services are removed too:</p>
 
-  <div guh-wizard-step title="Associated rules">
-    <p>There {{ remove.rules.length > 1 ? 'are several rules' : 'is a rule' }} associated with {{ remove.childServices.length > 1 ? 'some services' : 'a service' }} that should be removed. Should this rule{{ remove.rules.length > 1 ? 's' : '' }} be updated or removed?</p>
+  <ul class="list" ng-if="removeService.childServices.length > 0" ng-repeat="childService in removeService.childServices | orderBy: 'name' track by $index">
+    <li class="list__item">{{ childService.name ? childService.name : childService.deviceClass.name }}</li>
+  </ul>
 
-    <ul class="list">
-      <li ng-repeat="rule in remove.rules | orderBy: 'name' track by $index">
-        <guh-form-field label="{{ rule.name }}"
-                name="{{ rule.id }}"
-                param-type="{
-                  allowedValues: [remove.policyAllowedValues.update.label, remove.policyAllowedValues.remove.label],
-                  name: 'Type',
-                  type: 'String'
-                }"
-                state="{
-                  value: remove.getPolicyLabel(remove.rulePolicies[rule.id])
-                }"
-                template="app/shared/ui/form/form-field-templates/form-field-select-execute.html"
-                on-value-change="remove.setPolicy(params[0].value, rule.id)"></guh-form-field>
-      </li>
-    </ul>
-    <button class="button" type="button" ng-click="remove.removeAll()">Update/Remove associated rules</button>
-  </div>
+  <button class="button button_type_submit" type="button" ng-click="removeService.removeAll()">Remove {{ removeService.parentService.name ? removeService.parentService.name : removeService.parentService.deviceClass.name }} and {{ removeService.childServices.length > 0 ? (removeService.childServices.length + 1) + ' connected services' : (removeService.currentService.name ? removeService.currentService.name : removeService.currentService.deviceClass.name) }}</button>
+</div>
+
+<div class="inner-content" ng-if="removeService.servicePoliciesSet && removeService.moods.length > 0">
+  <h3>Associated moods found</h3>
+
+  <p>The following mood{{ removeService.moods.length > 1 ? 's' : '' }} are associated with {{ removeService.childServices.length > 1 ? 'some services' : 'a service' }} that should be removed. Should the mood{{ removeService.moods.length > 1 ? 's' : '' }} be removed? If you don't remove the moods, the service{{ removeService.childServices.length > 1 ? 's aren\'t' : ' isn\'t' }} removed aswell.</p>
+
+  <ul>
+    <li ng-repeat="mood in removeService.moods | orderBy: 'name' track by $index">
+      <guh-form-field label="{{ mood.name }}"
+              name="{{ mood.id }}"
+              param-type="{
+                allowedValues: [removeService.policyAllowedValues.update.label, removeService.policyAllowedValues.remove.label],
+                name: 'Type',
+                type: 'String'
+              }"
+              state="{
+                value: removeService.getPolicyLabel(removeService.rulePolicies[mood.id])
+              }"
+              template="app/shared/ui/form/form-field-templates/form-field-select-execute.html"
+              on-value-change="removeService.setPolicy(params[0].value, mood.id)"></guh-form-field>
+    </li>
+  </ul>
+
+  <button class="button button_type_submit" type="button" ng-click="removeService.removeAll()">Remove associated mood{{ removeService.moods.length > 1 ? 's' : '' }}</button>
 </div>
