--- a/src/app/components/services/detail/device-class-templates/template-not-available.html
+++ b/src/app/components/services/detail/device-class-templates/template-not-available.html
@@ -34,7 +34,7 @@
     <div ng-switch="state.stateType.unit" ng-repeat="state in service.states track by $index" class="state">
       <p class="name">{{ state.stateType.name }}</p>
       <p class="value" ng-switch-when="UnitUnixTime">{{ state.value * 1000 | date: 'dd.MM.yyyy' }}, {{ state.value * 1000 | date: 'HH:mm' }}</p>
-      <p class="value" ng-switch-default>{{ state.value | number: 2 }} {{ state.stateType.unit | unit }}</p>
+      <p class="value" ng-switch-default>{{ state.value }} {{ state.stateType.unit | unit }}</p>
     </div>
   </guh-tab>
 
