--- a/src/app/components/devices/add/pairing-templates/devices-add-create-discovery.html
+++ b/src/app/components/devices/add/pairing-templates/devices-add-create-discovery.html
@@ -34,7 +34,7 @@
 <!-- Discovered devices -->
 <p ng-show="newDevice.discoveredDevices.length > 0">Select your desired device/plugin.</p>
 <ul class="list" ng-show="newDevice.discoveredDevices.length > 0">
-  <li class="list__item list__item_isClickable" ng-repeat="device in newDevice.discoveredDevices track by $index | orderBy: 'name'" ng-click="newDevice.add(device)">
+  <li class="list__item list__item_isClickable" ng-repeat="device in newDevice.discoveredDevices track by $index | orderBy: 'name'" ng-click="newDevice.create(device)">
     {{ device.title }} ({{ device.description }})
     <svg class="icon">
       <use xlink:href="./assets/svg/ui/ui.symbol.svg#plus"></use>
