--- a/src/app/components/services/add/pairing-templates/services-add-setup-push-button.html
+++ b/src/app/components/services/add/pairing-templates/services-add-setup-push-button.html
@@ -21,4 +21,6 @@
 -->
 
 <p class="padding">{{ newService.displayMessage }}.</p>
-<button class="button button-full" ng-click="newService.confirmPairing()">OK</button>
+<form name="pushButton" ng-submit="newService.confirmPairing()">
+  <button class="button" type="submit">OK</button>
+</form>
