--- a/src/app/components/services/add/pairing-templates/services-add-create-discovery.html
+++ b/src/app/components/services/add/pairing-templates/services-add-create-discovery.html
@@ -34,7 +34,7 @@
 <!-- Discovered devices -->
 <p ng-show="newService.discoveredDevices.length > 0">Select your desired device/plugin.</p>
 <ul class="list" ng-show="newService.discoveredDevices.length > 0">
-  <li class="list__item list__item_isClickable" ng-repeat="device in newService.discoveredDevices track by $index | orderBy: 'name'" ng-click="newService.create(device)">
+  <li class="list__item list__item_isClickable" ng-repeat="device in newService.discoveredDevices | orderBy: 'name' track by $index" ng-click="newService.create(device)">
     {{ device.title }}, {{ device.description }}
     <svg class="icon">
       <use xlink:href="./assets/svg/ui/ui.symbol.svg#plus"></use>
