Remove disabled attribute because it is currently not working properly.

--- a/src/app/shared/ui/tabs/tabset.html
+++ b/src/app/shared/ui/tabs/tabset.html
@@ -24,8 +24,7 @@
 <div class="tabset">
   <ul>
     <li ng-repeat="tab in tabset.tabs track by $index">
-      <!-- <a href="" ng-class="{ 'active': tab.active, 'hotkey': tab.hotkey, 'disabled': tab.disabled }" ng-click="tabset.selectTab(tab)">{{ tab.heading }}</a> -->
-      <a href="" ng-class="{ 'active': tab.active, 'hotkey': tab.hotkey, 'disabled': tabset.disabled }" ng-click="tabset.selectTab(tab)" ng-bind-html="tabset.tabHeadings[$index]"></a>
+      <a href="" ng-class="{ 'active': tab.active, 'hotkey': tab.hotkey }" ng-click="tabset.selectTab(tab)" ng-bind-html="tabset.tabHeadings[$index]"></a>
     </li>
   </ul>
 
