--- a/src/app/shared/ui/action/action.html
+++ b/src/app/shared/ui/action/action.html
@@ -30,7 +30,7 @@
 
 
 <!-- ActionType with one paramType -->
-<guh-form-field label="{{ action.name }}"
+<guh-form-field label="{{ action.actionType.name }}"
                 name="{{ paramType.name }}"
                 param-type="paramType"
                 state="action.state"
