Add intro and dynamic-container components.

--- a/src/components/dynamic-container/dynamic-container.html
+++ b/src/components/dynamic-container/dynamic-container.html
@@ -21,26 +21,5 @@
 -->
 
 
-<!-- Header -->
-<header>
-  <h1>App</h1>
-  <nav>
-    <ul>
-      <li ui-sref-active="active"><a ui-sref="app.dashboard">Dashboard</a></li>
-      <li ui-sref-active="active"><a ui-sref="app.things">Things</a></li>
-      <li ui-sref-active="active"><a ui-sref="app.rules">Rules</a></li>
-    </ul>
-  </nav>
-</header>
-
-<!-- Content -->
-<div>
-  <h2>Router</h2>
-  <pre>{{ app.router | json }}</pre>
-
-  <h2>Server information</h2>
-  <pre>{{ app.serverInfo | json }}</pre>
-
-  <h2>Intro</h2>
-  <guh-intro></guh-intro>
-</div>
+<h4>Dynamic Container</h4>
+<div class="content"></div>
