--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -28,7 +28,6 @@
  *
  */
 
-// Font: Ubuntu
 @include font-face('Ubuntu Light', '/assets/fonts/Ubuntu/Ubuntu-Light', 300, normal);
 @include font-face('Ubuntu', '/assets/fonts/Ubuntu/Ubuntu-Regular', 400, normal);
 @include font-face('Ubuntu Bold', '/assets/fonts/Ubuntu/Ubuntu-Bold', 700, normal);
@@ -39,14 +38,7 @@
  *
  */
 
-$c-green: #7cc09a;
-$c-turquoise: #57baae;
-$c-grey: #676767;
-$c-black: #000;
-$c-white: #fff;
-
-$colors: (
-  "background": rgba($c-white, 0.05),
-  "foreground": $c-white
-);
-
+$grey: #676767;
+$green: #7cc09a;
+$turquoise: #57baae;
+$white: #fff;
