--- a/src/app/containers/things/things.html
+++ b/src/app/containers/things/things.html
@@ -15,23 +15,16 @@
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
   AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  LIABILITY, WHETHER IN AN ActionType OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   SOFTWARE.
 -->
 
 
-<!-- <div class="wrapper" ng-class="app.$state.current.controllerAs"> -->
-<div class="wrapper" ng-class="{ 'intro': app.$state.includes('guh.intro'), 'devices': app.$state.includes('guh.devices.master'), 'device': app.$state.includes('guh.devices.detail') }">
-  <header class="app">
-    <nav>
-      <ul>
-        <li ng-class="{ active: app.$state.includes('guh.dashboard') }"><a ui-sref="guh.dashboard">Dashboard</a></li>
-        <li ng-class="{ active: app.$state.includes('guh.things') }"><a ui-sref="guh.things">Things</a></li>
-        <li ng-class="{ active: app.$state.includes('guh.rules') }"><a ui-sref="guh.rules">Rules</a></li>
-      </ul>
-    </nav>
-  </header>
+<h1>Things</h1>
 
-  <div ui-view class="content"></div>
-</div>
+<ul>
+  <li ng-repeat="device in things.configuredDevices | orderBy:'name' track by $index">
+    <p>{{ device.name }}</p>
+  </li>
+</ul>
