--- a/src/app/components/tile-item/tile-item.html
+++ b/src/app/components/tile-item/tile-item.html
@@ -21,8 +21,17 @@
 -->
 
 
-<guh-tile-list initial-visible-id="{{ things.currentDevice.id }}" on-select-tile="things.showDetails(tileId)">
-  <guh-tile-item id="{{ device.id }}" icon-url="./assets/svg/device-class/device-class.symbol.svg#default" title="{{ device.name }}" description="{{ device.getDescription('&nbsp;&middot;&nbsp;') }}" ng-repeat="device in things.configuredDevices | orderBy:'name' track by $index"></guh-tile-item>
-</guh-tile-list>
-
-<div class="ThingDetails" ui-view></div>
+<div class="TileItem__wrapper-outer" ng-click="tileItem.select()">
+  <div class="TileItem__wrapper-inner">
+    <!-- <svg class="TileItem__icon">
+      <use xlink:href="./assets/svg/device-class/device-class.symbol.svg#default"></use>
+    </svg> -->
+    <div class="TileItem__icon" ng-transclude="icon">
+      <svg>
+        <use xlink:href="{{ tileItem.iconUrl }}"></use>
+      </svg>
+    </div>
+    <div class="TileItem__title truncate">{{ tileItem.title }}</div>
+    <div class="TileItem__description truncate">{{ tileItem.description }}</div>
+  </div>
+</div>
