--- a/src/assets/scss/base/_content.scss
+++ b/src/assets/scss/base/_content.scss
@@ -23,32 +23,19 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+.content {
+  @include rem(padding, 0, 0, 6);
 }
 
-html {
-  box-sizing: border-box;
-  @include rootsize();
+@include media($min-width-l) {
+  .content {
+    @include rem(padding, 7.5, 0);
+  }
 }
 
-body {
-  color: $grey;
-  font-family: 'Ubuntu';
-  font-weight: 400;
-  @include rem(font-size, 1);
-  @include rem(line-height, 1.5);
-}
-
-a {
-  color: inherit;
-}
-
-.truncate {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 100%;
+@include media($min-width-xl) {
+  .content {
+    margin: 0 auto;
+    width: $max-width-l;
+  }
 }
